# advent-of-code

2021/day1/src/: main.rs
2021/day2/src/: main.rs
2021/day3/src/: main.rs
2021/day4/src/: main.rs
2021/day5/src/: main.rs
2021/day6/src/: main.rs
2021/day7/: rust-toolchain.toml
2021/day7/src/: main.rs
2021/day8/src/: main.rs
2022/: .gitignore
2022/day1/lib/: day1.ex
2022/day10/lib/: day10.ex
2022/day11/src/: main.rs
2022/day2/lib/: day2.ex
2022/day3/lib/: day3.ex
2022/day4/lib/: day4.ex
2022/day5/: .gitignore  README.md
2022/day5/ex/lib/: ex.ex
2022/day5/rust/src/: main.rs
2022/day6/lib/: day6.ex
2022/day7/src/: main.rs
2022/day8/src/: main.rs
2022/day9/lib/: part_one.ex  part_two.ex  utils.ex
2022/day9/test/: part_one_test.exs
2023/src/: day1.rs  day2.rs  main.rs
2024/cpp/: .clang-format  .gitignore  CMakeLists.txt  day8.cpp  day8.h  main.cpp
2024/haskell/: aoc2024.cabal
2024/haskell/app/: Day1.hs  Day2.hs  Day3.hs  Main.hs
2024/ocaml/lib/: day4.ml  day4.mli  day5.ml  day6.ml  day6.mli  dune  solutions.ml  utils.ml
2024/pascal/: .gitignore  AdventOfCode.lpi  AdventOfCode.lpr  AdventOfCode.lps  day7.pas
